# unbabel-backend-engineering-challenge

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
inputoutput/: gen.py
inputoutput/assumption-1/: 10-expected-output.json  input.json
inputoutput/complex/: 10-expected-output.json  2-expected-output.json  3-expected-output.json  input.json
inputoutput/example/: 20-expected-output.json  5-expected-output.json  input.json
inputoutput/exclusive-start-assumption/: input.json
inputoutput/invalid-json/: input.json
inputoutput/invalid-no-duration/: input.json
inputoutput/invalid-no-timestamp/: input.json
inputoutput/same-minute-events-simple/: 10-expected-output.json  input.json
inputoutput/same-minute-events-small/: 10-expected-output.json  input.json
inputoutput/same-timestamp-events/: 10-expected-output.json  input.json
inputoutput/simple/: 10-expected-output.json  input.json
inputoutput/zero-seconds-event-begin/: 10-expected-output.json  input.json
inputoutput/zero-seconds-event-end/: 10-expected-output.json  input.json
inputoutput/zero-seconds-event-simple/: 10-expected-output.json  input.json
